examples/test/testpolicy13175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13175
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key40: value31
      key20: value43
      key37: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value47
      podSelector:
        matchLabels:
          key26: value31
          key23: value33
